--- a/src/Curriculum.css
+++ b/src/Curriculum.css
@@ -2,3 +2,36 @@
   background-color: #8ee3f5;
   font-family: 'Oswald', sans-serif;
 }
+
+.top {
+  font-size: 60px;
+  color: #7e52a0;
+  text-align: center;
+}
+
+#intro {
+  font-size: 30px;
+  color: #012a36;
+  width: 70vw;
+  margin-left: 15vw;
+  text-align: center;
+}
+
+.topics {
+  display: inline-block;
+  text-align: center;
+  font-size: 30px;
+  background-color: #b084cc;
+  width: 35vw;
+  margin-left: 10vw;
+  margin-bottom: 100px;
+}
+
+.topic-table {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.topic-table td {
+  padding: 10px 20px 10px 20px;
+}
