--- a/src/Curriculum.css
+++ b/src/Curriculum.css
@@ -46,16 +46,25 @@
 }
 
 .topic-table {
-  margin-left: auto;
-  margin-right: auto;
+  width: 100%;
 }
 
 .topic-table td {
-  padding: 10px 20px 10px 20px;
+  padding: 10px 0px 10px 0px;
 }
 
 .popup {
   display: none;
+}
+
+.topic-table td:hover .popup {
+  position: absolute;
+  display: block;
+  background-color: #012a36;
+  color: white;
+  width: 20vw;
+  font-size: 20px;
+  padding: 10px 10px 10px 10px;
 }
 
 @keyframes textAppear {
