--- a/src/Mentors.css
+++ b/src/Mentors.css
@@ -1,4 +1,11 @@
 #mentors-body {
   background-color: #8ee3f5;
   font-family: 'Oswald', sans-serif;
+  height: 100vw;
+}
+
+#mentors-heading {
+  color: #7E52A0;
+  font-size: 50px;
+  text-align: center;
 }
