--- a/src/Header.css
+++ b/src/Header.css
@@ -1,5 +1,5 @@
 #nav-bar {
-  background-color: #29274c;
+  background-color: #6e3ba5;
   height:8vh;
   overflow:hidden;
 }
@@ -7,13 +7,13 @@
 .nav-link {
   display: inline-block;
   float: right;
-  color: white;
+  color: #efe3f4;
   text-decoration: none;
   padding: 2.5vh 15px 2.5vh 15px;
   font-family: 'Oswald', sans-serif;
 }
 
 .nav-link:hover {
-  background-color: white;
-  color: #29247c;
+  background-color: #efe3f4;
+  color: #6e3ba5;
 }
