--- a/src/Curriculum.css
+++ b/src/Curriculum.css
@@ -1,5 +1,5 @@
 #curriculum-body {
-  background-color: #8ee3f5;
+  background-color: #122035;
   font-family: 'Oswald', sans-serif;
 }
 
@@ -11,7 +11,7 @@
 
 .top {
   font-size: 60px;
-  color: #7e52a0;
+  color: #f9f7ff;
   text-align: center;
 }
 
@@ -29,7 +29,7 @@
 
 .desc {
   font-size: 30px;
-  color: #012a36;
+  color: #efe3f4;
   width: 70vw;
   margin-left: 15vw;
   text-align: center;
