--- a/src/Mentors.css
+++ b/src/Mentors.css
@@ -1,11 +1,11 @@
 #mentors-body {
-  background-color: #8ee3f5;
+  background-color: #122035;
   font-family: 'Oswald', sans-serif;
   height: 100vw;
 }
 
 #mentors-heading {
-  color: #7E52A0;
+  color: #f9f7ff;
   font-size: 50px;
   text-align: center;
 }
